Small bugs corrected, now profile,search visible without login

--- a/jscss/style.css
+++ b/jscss/style.css
@@ -38,8 +38,9 @@ body {
     padding: 20px;
 }
 #searchBox {
-    margin: 8px;
-    padding: 10px;
+    margin: 7px;
+    height: 25px;
+    padding: 5px;
     border-radius: 10px;
     float: right;
 }
@@ -135,4 +136,8 @@ body {
 }
 .user a {
     font-size: 16px;
+}
+input[type=text], input[type=password] {
+    height: 30px;
+    margin: 5px;
 }
